--- a/app/views/styleguides/modules(icon).html.erb
+++ b/app/views/styleguides/modules(icon).html.erb
@@ -41,7 +41,7 @@ title: Modules - Icon
 <div class="sg-h4">Huge</div>
 <span class="icon icon--biro icon--huge" aria-hidden="true"></span>
 <div class="sg-h4">Default</div>
-<span class="icon icon--stacks icon--default" aria-hidden="true"></span>
+<span class="icon icon--stacks icon--base-size" aria-hidden="true"></span>
 <!-- //Alternate sizes -->
 
 <!-- Within Paragraphs -->
