--- a/app/assets/stylesheets/partials/modules/_hero.scss
+++ b/app/assets/stylesheets/partials/modules/_hero.scss
@@ -14,7 +14,9 @@
   @include to-rem(height, 220);
   @extend %mrg-base;
   color: #fff;
-
+  background-repeat: no-repeat;
+  background-position: 100% 0;
+  
   @include respond-min($non-palm) {
     @include to-rem(height, 300);
     @include to-rem(margin-bottom, $spacing-dbl);
