--- a/app/assets/stylesheets/partials/modules/_list-divider.scss
+++ b/app/assets/stylesheets/partials/modules/_list-divider.scss
@@ -27,14 +27,23 @@
     @include to-rem(padding-top, $spacing-base);
 		@include to-rem(padding-bottom, $spacing-half);
 
-    /* Increase right spacing for icon */
-  	.icon--spacing-lrg:before {margin-right: to-em($spacing-half);}
   }
 
-  /* Webkit */
-  @include target-webkit {
-		.icon--spacing-lrg:before {top: -2px;}
-	}
+  /* --Icon-- */
+
+  /* Left hand side icon */
+	.icon--spacing-lrg:before {
+
+    /* Increase right spacing for icon */
+    @include respond-min($non-palm) {
+      margin-right: to-em($spacing-half);
+    }
+
+    /* Webkit */
+    @include target-webkit {
+  		top: -2px;
+  	}
+  }
 
   /* Position arrow icon over to the right */
   .icon--arrow-right {
