--- a/app/assets/stylesheets/partials/modules/_map-google-static.scss
+++ b/app/assets/stylesheets/partials/modules/_map-google-static.scss
@@ -1,5 +1,5 @@
 /* ======================================================================================
-   @MODULES -> WIDGETS -> GOOGLE MAP STATIC
+   @MODULES -> GOOGLE MAP STATIC
    ====================================================================================== */
 
 /*
@@ -10,22 +10,29 @@
     Hides the Google static map image. It gets applied as a background image (but done via style block on the page)
 
   Demo:
-    Style Guide -> Modules -> Widgets -> Static Google Map
+    Style Guide -> Modules -> Google Map Static
 
   Credit:
     http://webdesigntutsplus.s3.amazonaws.com/tuts/365_google_maps/demo/index.html
 */
 
 .map-google-static {
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+
+  /* High res */
+  @media  (-o-min-device-pixel-ratio: 5/4),
+          (-webkit-min-device-pixel-ratio: 1.25),
+          (min-resolution: 120dpi) {
+            & {
+              background-size: 980px 280px;
+            }
+          }
+
   /* Hide image so we can use a bg img instead to maintain scale, see: http://webdesigntutsplus.s3.amazonaws.com/tuts/365_google_maps/demo/index.html */
   img {
-    opacity: 0;
+    @include opacity(0);
     @include to-rem(height, 280);
-
-    /* Old IE */
-    @include old-ie {
-      opacity: 1;
-    }
 
     /* Print */
     @media print {opacity: 1;}
