--- a/app/assets/stylesheets/partials/modules/_nav-contextual.scss
+++ b/app/assets/stylesheets/partials/modules/_nav-contextual.scss
@@ -16,43 +16,37 @@
   border-bottom: 1px solid $color-grey-1;
 }
 
-  .nav-contextual__clip-inner {
-    /* To prevent the flash between page load and the JS getting applied. This hides the scrollbar */
-    overflow: hidden;
-
-    /* Allows scrolling of the list of links when JS detects that the width of `nav-contextual__list` is wider than `nav-contextual__clip-inner`  */
-    .is-clipped & {
-      overflow-x: scroll;
-      -webkit-overflow-scrolling: touch;
-    }
-
-    /* No JS */
-    .no-js & {
-      overflow: auto;
-      -webkit-overflow-scrolling: touch;
-    }
-  }
-
-  /* Clip scrollable contents (palm) */
+  /* Clip scrollable contents */
   .nav-contextual__clip {
-    /* Make space for the arrow on the right. The spacing needs to be smaller than .nav-contextual__clip-overlay */
+    /* Make space for the arrow on the right. The spacing needs to be smaller than .nav-contextual__clip__overlay */
     @include to-rem(margin-right, $spacing-base);
   }
 
+    .nav-contextual__clip__inner {
+      /* Before the JS kicks in, we'll see a scrollbar if the list of links is long. This prevents the flash of styles you get between page load and the JS getting applied.  */
+      overflow: hidden;
+
+      /* Allows scrolling of the list of links when JS detects that the width of `nav-contextual__list` is wider than `nav-contextual__clip__inner`  */
+      .is-clipped & {
+        overflow-x: scroll;
+        -webkit-overflow-scrolling: touch;
+      }
+
+      /* No JS */
+      .no-js & {overflow-x: auto;}
+    }
+
     /* Gradient that lays on top of the list */
-    .nav-contextual__clip-overlay {
+    .nav-contextual__clip__overlay {
       /* Hide the overlay by default */
       display: none;
       top: 0;
       height: 100%;
-      color: $color-light-txt;
       @include to-rem(padding-left, $spacing-dbl);
       @include linear-gradient($from: rgba($color-grey-3, 0) 0%, $to: rgba($color-grey-3, 1) 50%, $dir: right, $dir-webkit: left);
 
-      /* Shows the overlay when JS detects that the width of `nav-contextual__list` is wider than `nav-contextual__clip-inner` */
-      .is-clipped & {
-        display: block;
-      }
+      /* Shows the overlay when JS detects that the width of `nav-contextual__list` is wider than `nav-contextual__clip__inner` */
+      .is-clipped & {display: block;}
 
       /* Shared rules */
       &,
@@ -105,17 +99,13 @@
 
     .nav-contextual__list > li  {
       a {
-        color: $color-light-txt;
-
         &:hover,
-        &:focus {color: #fff;}
-
+        &:focus,
         &.is-active {color: #fff;}
       }
     }
 
-  .nav-contextual__clip-overlay {
-    color: $color-light-txt;
+  .nav-contextual__clip__overlay {
     @include linear-gradient($from: rgba($color-med-txt, 0) 0%, $to: rgba($color-med-txt, 1) 50%, $dir: right)
   }
 }
