First commit of national homepage

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -86,6 +86,7 @@ Global stylesheet
 @import "partials/layout/header";
 @import "partials/layout/main";
 @import "partials/layout/footer";
+@import "partials/layout/national";
 
   /* Layout -> Grid */
   @import "partials/layout/grid/grid";
