--- a/app/assets/stylesheets/partials/modules/_icon.scss
+++ b/app/assets/stylesheets/partials/modules/_icon.scss
@@ -10,7 +10,11 @@
 		Style Guide -> Modules -> Icon
 */
 
-.icon:before {
+.icon:before,
+/* These pseudo elements are to render the 'drop down menu' / 'map popup' arrow pointers as they use an icon font (`@extend` isn't suitable for this) */
+.drop-down-menu__target:before,
+.filters__target:before,
+.menuTip:after {
 	@extend %sprite-icon;
 	speak: none;
 	font-family: "icons";
@@ -181,10 +185,15 @@
 .icon--arrow-right-big:before {content: "\e01c";}
 
 /* Arrow full up */
-.icon--arrow-up-full:before {content: "\e00b";}
+.icon--arrow-up-full:before,
+/* These pseudo elements are to render the 'drop down menu' arrow pointer as they use an icon font (`@extend` isn't suitable for this) */
+.drop-down-menu__target:before,
+.filters__target:before {content: "\e00b";}
 
 /* Arrow full down */
-.icon--arrow-down-full:before {content: "\e00a";}
+.icon--arrow-down-full:before,
+/* This pseudo element is to render the 'map popup' arrow pointer as they use an icon font (`@extend` isn't suitable for this) */
+.menuTip:after {content: "\e00a";}
 
 /* Arrow full left */
 .icon--arrow-left-full:before {content: "\e008";}
