Creating UI for when a product is not available at a centre - WSF-5029

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,8 +22,7 @@
     <%# //Product name, brand and price %>
 
     <%# Check if a product is available at a centre %>
-    <%# if @centres.empty? %>
-    <% if @centres.any? %>
+    <% if @centres.empty? %>
 
       <%# When product is not available at a centre %>
       <div class="detail-view__product-not-avble detail-view__divider">
