--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -1,10 +1,21 @@
-<header role="banner" class="national-header">
-  <!-- Logo -->
-  <span class="logo">
-    <img src="<%= image_path "logo-white.svg" %>" alt="Westfield" data-svg-fallback="<%= image_path "logo-white.png" %>">
-  </span>
-  <!-- //Logo -->
-  <h1>You want. We find.</h1>
+<header role="banner" class="national-header"> 
+  <div class="container container--position">
+    <!-- Logo -->
+    <span class="logo">
+      <img src="<%= image_path "logo-white.svg" %>" alt="Westfield" data-svg-fallback="<%= image_path "logo-white.png" %>">
+    </span>
+    <!-- //Logo -->
+
+    <h1>You want. We find.</h1>
+
+    <nav>
+      <a href="http://westfield.com">A link</a>
+    </nav>
+  </div>
+
+  <a class="national-hero" href="http://youtube.com" rel="external">
+    <div></div>
+  </a>
 </header>
 
 <main class="main" id="main" role="main">
@@ -12,5 +23,22 @@
   <p>lasdflaksjaldskf ;lkasjdf ;alksdjf ;laksdjf ;aslkdjf ;lkajds f;lkja ;sdlfkj ;aslkdfja ;sdlkfj ;alsdkjfa ;sldkfja;lskdfj</p>
 
   <p>lasdflaksjaldskf ;lkasjdf ;alksdjf ;laksdjf ;aslkdjf ;lkajds f;lkja ;sdlfkj ;aslkdfja ;sdlkfj ;alsdkjfa ;sldkfja;lskdfj</p>
+
+  <p>lasdflaksjaldskf ;lkasjdf ;alksdjf ;laksdjf ;aslkdjf ;lkajds f;lkja ;sdlfkj ;aslkdfja ;sdlkfj ;alsdkjfa ;sldkfja;lskdfj</p>
+
+  <p>lasdflaksjaldskf ;lkasjdf ;alksdjf ;laksdjf ;aslkdjf ;lkajds f;lkja ;sdlfkj ;aslkdfja ;sdlkfj ;alsdkjfa ;sldkfja;lskdfj</p>
+
+  <p>lasdflaksjaldskf ;lkasjdf ;alksdjf ;laksdjf ;aslkdjf ;lkajds f;lkja ;sdlfkj ;aslkdfja ;sdlkfj ;alsdkjfa ;sldkfja;lskdfj</p>
+
+  <p>lasdflaksjaldskf ;lkasjdf ;alksdjf ;laksdjf ;aslkdjf ;lkajds f;lkja ;sdlfkj ;aslkdfja ;sdlkfj ;alsdkjfa ;sldkfja;lskdfj</p>
   </div>
 </main>
+
+<script>
+  // var hero = document.getElementById('js-national-hero');
+  // var pageWidth      = hero.offsetWidth;
+  // var viewportHeight = window.innerHeight;
+  // var fluidPadding   = (viewportHeight/pageWidth) * 100;
+
+  // hero.style.paddingTop = fluidPadding + "%";
+</script>
